fixed styling on IE

--- a/page-specificStyle.css
+++ b/page-specificStyle.css
@@ -109,6 +109,7 @@
     border-bottom: none;
   }
   .founder img {
+    flex: 0 0 50%;
     width: 50%;
     transition: 0.3s ease;
   }
@@ -174,15 +175,20 @@
   display: block;
   width: 25px;
   height: 25px;
-  box-sizing: border-box;
   top: 50%;
   left: -11%;
+  box-sizing: border-box;
   background-color: #073763;
   border: 4px solid rgb(240, 240, 240);
   border-radius: 50%;
   transform-origin: center;
   transform: translate(-50%, -50%) scale(1, 1);
   transition: inherit;
+}
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  #timeline .timepoint::after {
+    background-clip: padding-box;
+  }
 }
 #timeline .timepoint:hover {
   box-shadow: 20px 20px rgba(7, 55, 99, 0.2);
@@ -208,6 +214,8 @@
   align-items: center;
   padding: 2.5em 3em;
   border-bottom: 1px solid white;
+  max-width: 100%;
+  flex-basis: auto;
 }
 #product-starting-steps .product-steps p.steps-title {
   margin-top: 0;
@@ -255,7 +263,7 @@
       width: 60%;
   }
   #product-starting-steps img {
-      flex-grow: 0;
+      flex: 0 0 auto;
       max-width: 40%;
       margin-top: 0;
       margin-left: 3em;
@@ -323,10 +331,12 @@
 #newsStories {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
 }
 .news-story {
-  flex: 1 300px;
-  margin: 1em;
+  flex: 1 0 300px;
+  align-self: stretch;
+  margin: 0.5em;
   box-shadow: 0 0 20px gray;
   transition: 0.35s ease;
 }
@@ -356,7 +366,7 @@
 .news-story h2 a {
   color: black;
   text-decoration: none;
-  transition: inherit;
+  transition: 0.2s ease;
 }
 .news-story h2, .news-story .story-author {
   margin-bottom: 0;
@@ -409,10 +419,7 @@
   #newsStories {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 1em;
-  }
-  .news-story {
-    margin: 0;
+    grid-gap: 0em;
   }
 }
 
